[package]
name = "actix-web-sql-identity"
version = "0.1.1"
authors = ["Kevin Allison <kvnallsn@gmail.com>"]

[dependencies]
actix = "0.5"
actix-web = "0.6"
base64 = "0.9"
failure = "*"
failure_derive = "*"
futures = "0.1"
log = "0.4"
rand = "0.5"

[dependencies.diesel]
version = "1.3"
features = ["r2d2"]

[dev-dependencies]
dotenv = "0.13"

[features]
default = ["sqlite", "mysql", "postgres"]

sqlite = ["diesel/sqlite"]
mysql = ["diesel/mysql"]
postgres = ["diesel/postgres"]
