[package]
name = "actix-web-sql-identity"
version = "0.1.1"
authors = ["Kevin Allison <kvnallsn@gmail.com>"]
description = "A SQL-backend identity provider for Actix Web's identity system"
repository = "https://github.com/kvnallsn/actix-web-database-identity"
readme = "README.md"
keywords = ["identity", "actix", "database", "sql", "postgres"]
categories = ["web-programming", "database", "authentication"]
license = "BSD 3-Clause"
exclude = ["tests/*.sqlite3", "doc/**/*.html"]

[badges]
travis-ci = { repository = "kvnallsn/actix-web-database-identity", branch = "master" }

[dependencies]
actix = "0.5"
actix-web = "0.6"
base64 = "0.9"
failure = "*"
failure_derive = "*"
futures = "0.1"
log = "0.4"
rand = "0.5"

[dependencies.diesel]
version = "1.3"
features = ["r2d2"]

[dev-dependencies]
dotenv = "0.13"

[features]
default = ["sqlite", "mysql", "postgres"]

sqlite = ["diesel/sqlite"]
mysql = ["diesel/mysql"]
postgres = ["diesel/postgres"]
