[package]
name = "actix-web-sql-identity"
version = "0.4.0"
authors = ["Kevin Allison <kvnallsn@gmail.com>"]
description = "A SQL-backend identity provider for Actix Web's identity system"
documentation = "https://docs.rs/crate/actix-web-sql-identity"
repository = "https://github.com/kvnallsn/actix-web-database-identity"
readme = "README.md"
keywords = ["identity", "actix", "database", "sql", "postgres"]
categories = ["web-programming", "database", "authentication"]
license = "BSD-3-Clause"
exclude = ["tests/*.sqlite3", "doc/**/*.html"]

[badges]
travis-ci = { repository = "kvnallsn/actix-web-database-identity", branch = "master" }

[dependencies]
actix = "0.7"
actix-web = "0.7"
base64 = "0.9"
chrono = "0.4.4"
failure = "0.1"
failure_derive = "0.1"
futures = "0.1"
log = "0.4"
rand = "0.5"

[dependencies.diesel]
version = "1.3"
features = ["chrono", "r2d2"]

[dev-dependencies]
dotenv = "0.13"

[features]
default = ["sqlite", "mysql", "postgres"]

sqlite = ["diesel/sqlite"]
mysql = ["diesel/mysql"]
postgres = ["diesel/postgres"]
